Another edit to understanding staging with add and then committing

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-This is my tutorial repo to learn git basics via lifehacker
+//README
+//This is my tutorial repo to learn git basics via lifehacker
+
+//Another edit
